[project]
name = "glmnet"
version = "2.2.1"
description = "Python wrapper for glmnet"
readme = 'README.rst'
requires-python = ">=3.9"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "numpy==1.22.4; python_version=='3.9'",
    "numpy==1.22.4; python_version=='3.10'",
    "numpy; python_version>'3.10'",
    "setuptools",
    "wheel"
]
