[project]
name = "python-glmnet"
version = "2.2.2.post2"
description = "Python wrapper for glmnet"
readme = 'README.rst'
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.9.2",
    "scikit-learn>=0.18.0",
    "scipy>=0.14.1",
    "joblib>=0.14.1",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "numpy==1.22.4; python_version=='3.9'",
    "numpy==1.22.4; python_version=='3.10'",
    "numpy==1.23.2; python_version=='3.11'",
    "numpy; python_version>'3.11'",
    "setuptools",
    "wheel"
]
